ui issues bio page

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#">Practice Areas</a>
+            <a href="#practice">Practice Areas</a>
           </li>
           <li>
             <a href="/news.html">News</a>
           </li>
           <li>
-            <a href="#">Team</a>
+            <a href="#milad">Team</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="#form">Contact</a>
           </li>
         </ul>
       </div>
@@ -147,7 +147,7 @@
     </div>
   </div>
   <!-- Business and Corporate  -->
-  <div class="bg-black">
+  <div id="practice" class="bg-black">
     <div
       class="corporate mx-auto row px-lg-0 ps-sm-3 align-items-center align-items-md-start flex-wrap justify-content-center justify-content-lg-between">
       <div class="col-sm-6 col-lg-7 col-12 pt-4 pb-4 pe-md-3 pe-md-0 pe-3 ps-md-5 pb-4" data-aos="fade-up"
@@ -242,7 +242,7 @@
             <h2 class="letter_0-5 text-white mt-3 fw-bold lh_100 fs_5xl">
               Litigation
             </h2>
-            <p class="opacity_07 fs_md fw-semibold lh_100 pb-3 mb-0 letter_0-3 mt-sm-5 pt-3 text-white">
+            <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 mt-sm-5 pt-3 text-white">
               Real Estate Disputes
             </p>
             <div class="gray_hr"></div>
@@ -459,8 +459,8 @@
     </div>
   </div>
   <!-- Milad section  -->
-  <div class="max_w_1440">
-    <div class="bg-black border_one_side_top mt_150 ">
+  <div id="milad" class="max_w_1440">
+    <div class="bg-black border_one_side_top mt_150">
       <div class="milad_section mx-auto ">
         <div class="d-flex flex-lg-row flex-column justify-content-between">
           <div data-aos="fade-down" data-aos-duration="1000">
@@ -476,7 +476,7 @@
               <p class="attorney_text text-white fw-normal pt-sm-5 pt-4 mb-0 fs_lg lh_100">
                 Attorney Milad Boddoohi
               </p>
-              <p class="text-white mb-3 mt-0 letter_0-3 opacity_07 fs_sm fw-semibold lh_100">
+              <p class="text-white mb-3 mt-0 letter_0-3 pt-2 opacity_07 fs_sm fw-semibold lh_100">
                 Partner & Co-Founder
               </p>
               <a type="sumbit" target="_blank" rel="noopener noreferrer"
@@ -562,7 +562,7 @@
       <p class="pt-sm-5 pt-4 letter_0-3 text-black mb-0 fw-semibold lh_100 fs_lg">
         Cheryl Friedlander
       </p>
-      <p class="letter_0-3 opacity_07 mb-3 fs_sm fw-semibold lh_100">
+      <p class="letter_0-3 opacity_07 pt-2 mb-3 fs_sm fw-semibold lh_100">
         Partner & Co-Founder
       </p>
       <a type="sumbit" target="_blank" rel="noopener noreferrer"
@@ -624,7 +624,7 @@
     </div>
   </div>
   <!-- anything section  -->
-  <div class="bg-black anything_section position-relative">
+  <div id="form" class="bg-black anything_section position-relative form_spacing_1920">
     <div class="anything_container mx-auto py-5 custom_padding_anything_container">
       <div class="row py-4 mb-4 mt-3 align-items-center">
         <div class="col-md-6">
@@ -739,11 +739,12 @@
             <div
               class="d-flex flex-sm-row flex-column justify-content-center justify-content-sm-start align-items-center gap-sm-0 gap-2">
               <a class="fs_sm fw-semibold text-white footer_links_hover transition_03" href="#">Back to Top</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Practice
+              <a href="#practice" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Practice
                 Areas</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">News</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Team</a>
-              <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Contact</a>
+              <a href="/news.html"
+                class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">News</a>
+              <a href="#milad" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Team</a>
+              <a href="#form" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">Contact</a>
             </div>
             <div class="social_icons_margin d-md-flex d-none mt-sm-0 mt-4">
               <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
