--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <img class="parthners position-absolute end-0 z-1" src="/assets/images/header/characters-home.png" alt="partners" />
-        <img class="bf_bg_logo position-absolute end-0 z-0" src="/assets/images/header/header-bg.svg" alt="partners" />
+        <img class="bf_bg_logo position-absolute end-0 z-0" src="/assets/images/header/header-bg.svg" alt="partners-bf" />
     </main>
     <!-- advise section  -->
     <div class="position-relative py-md-5" id="advise">
