scroll bar modified

--- a/news.html
+++ b/news.html
@@ -94,8 +94,9 @@
         </div>
       </div>
       <div class="ms-sm-auto animation-element bounce-down in-view">
-        <img src="./assets/images/news/news_bg.svg" class="news_hero_image_desktop subject" />
-        <img src="./assets/images/news/news_bg_mobile_screen.svg" class="news_hero_image_mobile subject w-100" />
+        <img src="./assets/images/news/news_bg.svg" alt="news hero bg" class="news_hero_image_desktop subject" />
+        <img src="./assets/images/news/news_bg_mobile_screen.svg" alt="news hero bg mobile screen"
+          class="news_hero_image_mobile subject w-100" />
       </div>
     </div>
   </main>
