--- a/news.html
+++ b/news.html
@@ -49,13 +49,14 @@
   <!-- hero section  -->
   <main class="bg-black position-relative overflow-hidden news_header">
     <div class="ps-sm-3 px-3 pe-sm-0 mx-auto d-flex flex-md-row flex-column position-relative z-3">
-      <div class="side_nav news_side_nav ps-lg-5 pe-lg-0 px-md-4 py-xl-3 py-lg-0 py-3 flex-md-column flex-row d-flex">
+      <div
+        class="side_nav w-auto news_side_nav ps-lg-5 pe-md-0 px-md-4 py-xl-3 py-lg-0 py-3 flex-md-column flex-row d-flex">
         <div class="d-md-none menu_icon d-flex pe-3">
           <img onclick="showNav()" class="mobile-nav-icon cursor_pointer" id="navToggleIcon"
             src="/assets/images/icons/nav-toggle.svg" alt="toggle" />
         </div>
-        <a href="#"><img src="/assets/images/icons/logo.svg" alt="logo" /></a>
-        <ul id="navBar" class="d-flex mt-5 md:ms-2 flex-column ps-0 navbar_links">
+        <a href="/"><img src="/assets/images/icons/logo.svg" alt="logo" /></a>
+        <ul id="navBar" class="d-flex mt-5 md:ms-2 flex-column ps-0 navbar_links d-md-none">
           <li>
             <a href="index.html">Home</a>
           </li>
@@ -73,7 +74,8 @@
           </li>
         </ul>
       </div>
-      <div class="news_hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3">
+      <div
+        class="news_hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3 ps-sm-5 ps-0">
         <div data-aos="fade-up" data-aos-duration="1000">
           <a class="color-peach d-flex align-items-center back_to_top_header position-relative z-3" href="index.html">
             <svg width="51" height="12" viewBox="0 0 51 12" fill="none" xmlns="http://www.w3.org/2000/svg">
