news ui issues complete

--- a/news.html
+++ b/news.html
@@ -50,7 +50,7 @@
   <main class="bg-black position-relative overflow-hidden news_header">
     <div class="ps-sm-3 px-3 pe-sm-0 mx-auto d-flex flex-md-row flex-column position-relative z-3">
       <div
-        class="side_nav w-auto news_side_nav ps-lg-5 pe-md-0 px-md-4 py-xl-3 py-lg-0 py-3 flex-md-column flex-row d-flex">
+        class="side_nav w-auto news_side_nav pe-md-0 pe-md-4 ps-md-2 pb-xl-3 pt-xl-4 pt-3 pb-lg-0 py-3 flex-md-column flex-row d-flex">
         <div class="d-md-none menu_icon d-flex pe-3">
           <img onclick="showNav()" class="mobile-nav-icon cursor_pointer" id="navToggleIcon"
             src="/assets/images/icons/nav-toggle.svg" alt="toggle" />
@@ -75,8 +75,8 @@
         </ul>
       </div>
       <div
-        class="news_hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3 ps-sm-5 ps-0">
-        <div data-aos="fade-up" data-aos-duration="1000">
+        class="news_hero_section text-white d-flex flex-column justify-content-start pt-md-5 pt-2 position-relative ps-md-3 ps-sm-5 ps-0">
+        <div class="pt-md-5 mt-lg-5" data-aos="fade-up" data-aos-duration="1000">
           <a class="color-peach d-flex align-items-center back_to_top_header position-relative z-3" href="index.html">
             <svg width="51" height="12" viewBox="0 0 51 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="transition_03" d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z"
@@ -95,7 +95,7 @@
           </p>
         </div>
       </div>
-      <div class="ms-sm-auto animation-element bounce-down in-view">
+      <div class="ms-sm-auto animation-element bounce-down in-view" data-aos="fade-down" data-aos-duration="1000">
         <img src="./assets/images/news/news_bg.svg" alt="news hero bg" class="news_hero_image_desktop subject" />
         <img src="./assets/images/news/news_bg_mobile_screen.svg" alt="news hero bg mobile screen"
           class="news_hero_image_mobile subject w-100" />
@@ -108,7 +108,7 @@
       <div class="cards_container">
         <div class="cards_margin_padding row">
           <!-- card 1  -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/suprme_court.webp" class="news-img w-100" alt="supreme court image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -121,7 +121,7 @@
                     Another big win in Kings County, Supreme Court
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
                     target="_blank" rel="noopener noreferrer" class="text-black opacity_07">
                     We obtained outright dismissal of a claim brought
@@ -144,7 +144,7 @@
             </div>
           </div>
           <!-- card 2 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/big_win.webp" class="news-img w-100" alt="big win image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -157,7 +157,7 @@
                     Big win in the SDNY
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
                     target="_blank" rel="noopener noreferrer" class="text-black opacity_07">
                     We obtained a massive win in Federal Court, in the
@@ -175,7 +175,7 @@
             </div>
           </div>
           <!-- card 3 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/huge_victory.webp" class="news-img w-100" alt="huge victory image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -188,7 +188,7 @@
                     Huge victory in the Appellate Division, First Department
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 opacity_07 text-black fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 opacity_07 text-black fs_sm fw-semibold lh_100 mb-0 pt-3">
                   This was a big victory our client, a wonderful New York
                   cooperative corporation located in Queens, New York. On
                   appeal, a panel of judges in Manhattan agreed with us and
@@ -204,7 +204,7 @@
             </div>
           </div>
           <!-- card 4 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/big_win.webp" class="news-img w-100" alt="big win image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -217,7 +217,7 @@
                     Another big win in the SDNY
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 opacity_07 text-black fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 opacity_07 text-black fs_sm fw-semibold lh_100 mb-0 pt-3">
                   This was round two in a battle between our client, a
                   wonderful, well-known, and respected international travel
                   company, and another travel company over purported claims of
@@ -232,7 +232,7 @@
             </div>
           </div>
           <!-- card 5 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-up" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/esopus.webp" class="news-img w-100" alt="esopus image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -245,7 +245,7 @@
                     Esopus Updates Proposed Marina Camping Rules
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   Milad Boddoohi Quoted in the Daily Freeman Concerning The
                   Town of Esopus’ Passage of Zoning Regulations Governing
                   Marinas.
@@ -254,7 +254,7 @@
             </div>
           </div>
           <!-- card 6 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/esopus_seeks.webp" class="news-img w-100" alt="esopus seeks image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -267,7 +267,7 @@
                     Esopus Seeks to Revise Zoning for Marina RV Lodging
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   Milad Boddoohi quoted in the Daily Freeman concerning Town
                   of Esopus vs. Castaways Marina
                 </p>
@@ -275,7 +275,7 @@
             </div>
           </div>
           <!-- card 7 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-up" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/esopus_seeks.webp" class="news-img w-100" alt="esopus seeks image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -289,7 +289,7 @@
                     Allowing Camping At Marinas Along Rondout Creek
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   Milad Boddoohi quoted in the Daily Freeman concerning
                   proposed law revising Town of Esopus’ zoning regulations.
                 </p>
@@ -297,7 +297,7 @@
             </div>
           </div>
           <!-- card 8 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/boddoohi.webp" class="news-img w-100" alt="boddoohi image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -310,7 +310,7 @@
                     Boddoohi & Friedlander: New Law Alert:
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   On December 22, 2021, the New York State Legislature passed
                   (and Governing Hochul signed into law) a law exempting
                   cooperatives from several provisions of the HSTPA
@@ -319,7 +319,7 @@
             </div>
           </div>
           <!-- card 9 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-up" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/milad_boddoohi.webp" class="news-img w-100" alt="milad boddoohi image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -333,14 +333,14 @@
                     Way To Victory
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   A closer look at an underutilized tool rooted in the CPLR
                 </p>
               </div>
             </div>
           </div>
           <!-- card 10 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/milad_boddoohi_mam.webp" class="news-img w-100"
                 alt="milad boddoohi man image" />
@@ -356,7 +356,7 @@
                     Act.
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   Many cooperatives and condominiums have, for decades,
                   overlooked potent statutory rights, enabling them to
                   recapture building amenities currently under long-term,
@@ -366,7 +366,7 @@
             </div>
           </div>
           <!-- card 11 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-up" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/new_york.webp" class="news-img w-100" alt="new york image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -380,7 +380,7 @@
                     Time, Not Out of Luck
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   An unsettled aspect of the Condominium and Cooperative
                   Protection and Abuse Act may offer new hope.
                 </p>
@@ -388,7 +388,7 @@
             </div>
           </div>
           <!-- card 12 -->
-          <div class="col-12 col-sm-6 col-lg-4 new_data_card">
+          <div class="col-12 col-sm-6 col-lg-4 new_data_card" data-aos="fade-down" data-aos-duration="1000">
             <div class="data">
               <img src="./assets/images/news/new_york.webp" class="news-img w-100" alt="new york image" />
               <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link "
@@ -402,7 +402,7 @@
                     Offender Moves In
                   </h3>
                 </a>
-                <p class="overflow-y-auto letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
+                <p class=" letter_0-3 text-black opacity_07 fs_sm fw-semibold lh_100 mb-0 pt-3">
                   What, if anything, is the obligation of a board of a
                   condominium or cooperative when a convicted sex offender
                   moves in?
