business corporate images set

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <!-- Business and Corporate  -->
   <div id="practice" class="bg-black">
     <div
-      class="corporate mx-auto row px-lg-0 ps-sm-3 align-items-center align-items-md-start flex-wrap justify-content-center justify-content-lg-between">
+      class="corporate mx-auto row px-lg-0 ps-sm-3 align-items-center align-items-md-start flex-wrap justify-content-sm-center justify-content-lg-between">
       <div class="col-sm-6 col-lg-7 col-12 pt-4 pb-4 pe-md-3 pe-md-0 pe-3 ps-md-5 pb-4" data-aos="fade-up"
         data-aos-duration="1000">
         <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 corporate_deals">
@@ -158,7 +158,7 @@
               class="letter_03 text-uppercase color_bittersweet forward_line ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
               We deal with
             </h5>
-            <h2 class="letter_0-5 text-white mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
+            <h2 class="letter_0-5 text-white mt-sm-3 mb-2 fw-bold lh_100 fs_5xl pt-sm- pt-3">
               Business
               <br class="d-none d-lg-block" />
               & Corporate
@@ -182,8 +182,8 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-5 col-sm-6 px-sm-0 h-100 dollor" data-aos="fade-down" data-aos-duration="1000">
-        <img class="w-100 object-fit-contain h-100"
+      <div class="col-lg-5 col-sm-6 px-sm-0 h-100 dollor ms-autox`" data-aos="fade-down" data-aos-duration="1000">
+        <img class="w-100 object-fit-contain h-100 "
           src="/assets/images/business-and-corporate/business-and-corporate.svg" alt="real-estate" />
       </div>
     </div>
