--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
                         src="/assets/images/header/scroll-down.svg" alt="scroll_down" /></a>
             </div>
         </div>
-        <img class="parthners position-absolute end-0 z-1" src="/assets/images/header/characters-home.png" alt="partners" />
-        <img class="bf_bg_logo position-absolute end-0 z-0" src="/assets/images/header/header-bg.svg" alt="partners-bf" />
+        <img class="parthners position-absolute end-0 z-1" src="/assets/images/header/characters-home.png"
+            alt="partners" />
+        <img class="bf_bg_logo position-absolute end-0 z-0" src="/assets/images/header/header-bg.svg"
+            alt="partners-bf" />
     </main>
     <!-- advise section  -->
     <div class="position-relative py-md-5" id="advise">
@@ -829,22 +831,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>
-        function showNav() {
-            document.getElementById("navBar").classList.toggle("showNav");
-            document.body.classList.toggle("nav_mobile_scroll");
-            document.getElementById("navToggleIcon").src =
-                navBar.classList.contains("showNav")
-                    ? "/assets/images/icons/Cross.svg"
-                    : "/assets/images/icons/nav-toggle.svg";
-        }
-    </script>
     <!-- slider script link  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="
         https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js
         "></script>
     <script src="/assets/js/app.js"></script>
+    <script src="/assets/js/nav.js"></script>
     <!-- AOS  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
