--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
       </div>
       <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3" data-aos="fade-up" data-aos-duration="1000">
         <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 real_estate_deals">
-          <div class="ms-sm-4">
+          <div class="ms-sm-2">
             <h5
-              class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with forward_line position-relative">
+              class="letter_03 text-uppercase color_bittersweet mb-0 fs_sm fw-bold lh_100 we_deal_with forward_line position-relative">
               We deal with
             </h5>
-            <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
+            <h2 class="letter_0-5 text-black mt-sm-2 mb-2 fw-bold lh_100 fs_5xl">
               Real Estate
             </h2>
             <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 mt-4 letter_0-3 text-black">
@@ -155,10 +155,10 @@
         <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 corporate_deals">
           <div class="ms-sm-4">
             <h5
-              class="letter_03 text-uppercase color_bittersweet forward_line ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
+              class="letter_03 text-uppercase color_bittersweet forward_line mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
               We deal with
             </h5>
-            <h2 class="letter_0-5 text-white mt-sm-3 mb-2 fw-bold lh_100 fs_5xl pt-sm- pt-3">
+            <h2 class="letter_0-5 text-white mt-sm-2 mb-2 fw-bold lh_100 fs_5xl pt-sm- pt-3">
               Business
               <br class="d-none d-lg-block" />
               & Corporate
@@ -200,10 +200,10 @@
         <div class="py-xl-5 py-lg-4 pe-xl-5 pe-lg-4 pe-md-4 ms-lg-4 construction_deals">
           <div class="ms-sm-4">
             <h5
-              class="letter_03 text-uppercase color_bittersweet forward_line ms-2 mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
+              class="letter_03 text-uppercase color_bittersweet forward_line mb-0 fs_sm fw-bold lh_100 we_deal_with position-relative">
               We deal with
             </h5>
-            <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
+            <h2 class="letter_0-5 text-black mt-sm-2 mb-2 fw-bold lh_100 fs_5xl">
               Construction
             </h2>
             <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 mt-4 letter_0-3 text-black">
