--- a/news.html
+++ b/news.html
@@ -82,7 +82,7 @@
               <path class="transition_03" d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z"
                 fill="#FE6A5B"></path>
             </svg>
-            <h5 class="letter_0_3 text-uppercase transition_03 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet">
+            <h5 class="letter_0_3 text-uppercase transition_03 position-relative z-3 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet">
               Back to Home
             </h5>
           </a>
